リポジトリ情報を追加

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "0.0.1",
   "publisher": "yhonda-mtama",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ohishi-yhonda-pub/vscode-git-crypt-decorator"
+  },
   "engines": {
     "vscode": "^1.74.0"
   },
